# bulkrename

./: .bulkrename  Cargo.toml  flake.nix  readme.md  result
src/: main.rs
